--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build & move build docs",
+    "build": "rmdir docs /s /q & react-scripts build & move build docs",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
