--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/hammerjs": "^2.0.36",
     "@types/jest": "^24.0.25",
     "@types/node": "^12.12.24",
     "@types/react": "^16.9.17",
@@ -14,7 +15,8 @@
     "@types/react-router-dom": "^5.1.3",
     "antd": "^3.26.6",
     "firebase": "^7.6.2",
-    "node-sass": "^4.13.0",
+    "hammerjs": "^2.0.8",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
