--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "rmdir docs /s /q & react-scripts build & move build docs",
+    "build": "rmdir docs /s /q & react-scripts build & cp build/index.html build/404.html & move build docs",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
