--- a/package.json
+++ b/package.json
@@ -4,32 +4,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.0",
-    "@material-ui/icons": "^4.5.1",
-    "@material-ui/styles": "^4.9.0",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.10.0",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/hammerjs": "^2.0.36",
-    "@types/jest": "^24.0.25",
-    "@types/node": "^12.12.24",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.4",
-    "@types/react-redux": "^7.1.6",
-    "@types/react-router-dom": "^5.1.3",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^12.12.48",
+    "@types/react": "^16.9.41",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
     "@types/redux-devtools-extension": "^2.13.2",
-    "@types/redux-logger": "^3.0.7",
+    "@types/redux-logger": "^3.0.8",
     "@types/redux-thunk": "^2.1.0",
-    "antd": "^3.26.6",
-    "firebase": "^7.6.2",
+    "antd": "^3.26.18",
+    "firebase": "^7.15.5",
     "hammerjs": "^2.0.8",
     "node-sass": "^4.13.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-icons": "^3.8.0",
-    "react-redux": "^7.1.3",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
+    "react-redux": "^7.2.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
@@ -38,9 +38,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "rmdir docs /s /q & react-scripts build & cp build/index.html build/404.html & move build docs",
+    "build": "react-scripts build",
+    "build-gh": "rmdir docs /s /q & react-scripts build & cp build/index.html build/404.html & move build docs",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -58,7 +61,8 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "tslint": "^5.20.1",
-    "typescript": "^3.7.4"
+    "typescript": "^3.9.6"
   }
 }
