--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.3.0",
+    "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
@@ -39,7 +39,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build-gh": "rmdir docs /s /q & react-scripts build & cp build/index.html build/404.html & move build docs",
+    "build-gh": "rmdir docs /s /q & react-scripts build & copy build/index.html build/404.html & move build docs",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
