--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ REACT_APP_API_KEY=AIzaSyCBJLGUwm3Gudef3OmMpTr4_kuAKojdHKI
 REACT_APP_AUTH_DOMAIN=dnd-master-tools.firebaseapp.com
 REACT_APP_DATABASE_URL=https://dnd-master-tools.firebaseio.com
 REACT_APP_PROJECT_ID=dnd-master-tools
-REACT_APP_STORAGE_BUCKET=dnd-master-tools.appspot.com
+REACT_APP_STORAGE_BUCKET=gs://dnd-master-tools.appspot.com/
 REACT_APP_MESSAGING_SENDER_ID=338033505662
